some small z-index fixes

--- a/prototype/src/scss/base/layout.scss
+++ b/prototype/src/scss/base/layout.scss
@@ -57,6 +57,14 @@ ul {
 
 }
 
+input,
+select,
+textarea,
+button,
+label {
+	font-family: 'Roboto', sans-serif;
+}
+
 #wrapper {
 	position: relative;
 	display: block;
